#PR69 Spacing and hr fixed

--- a/Articles.css
+++ b/Articles.css
@@ -78,6 +78,11 @@ background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%)
     padding-top: 5px;
 }
 
+.ytvid{
+    height: 100vh;
+    width: 100vw;
+}
+
 @media (min-width: 769px) {
     .card-article-lg{
         width:30vw;
