--- a/index.css
+++ b/index.css
@@ -265,6 +265,7 @@ h6{
 
 
 
+
 .tflex .card 
 {
     overflow: hidden;
@@ -303,7 +304,7 @@ body::-webkit-scrollbar{
     opacity: 0.7;
     width: 100%;
     height: 20rem;
-    object-fit: cover;
+    object-fit: fill;
     z-index: -1;
     
 }
@@ -481,13 +482,14 @@ a:hover {
 .billyimg{
     border: 2px solid #8b8b8b;
     box-shadow: inset 5px 5px 1px 5px #8b8b8b,inset -5px -5px 1px 5px #8b8b8b;
-    object-fit: cover;
+    object-fit: fill;
+    height: 250px;
 }
 .billyimg-1{
     border: 2px solid #8b8b8b;
     box-shadow: inset 5px 5px 1px 5px #8b8b8b,inset -5px -5px 1px 5px #8b8b8b;
-    max-height: 95px;
-    object-fit: cover;
+    height: 95px;
+    object-fit: fill;
 
 }
 .bn a{
@@ -577,7 +579,7 @@ background-image: linear-gradient(90deg, #3d3d3d 0%, #ffffff 46%, #3d3d3d 100%);
 
 .posts
 {
-  max-width: 380px;
+  width: 380px;
 }
   
   /* .ctnr {
